# 3gulp-api

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
app/: main.py
app/core/: config.py  db.py
app/routers/: login.py  topics.py
supabase/: config.toml
supabase/migrations/: 20250822153137_remote_schema.sql  20250822153925_timeline_entries_with_effective_date.sql  20250907140303_dag.sql  20250910191956_schedule.sql  20250911172013_filter_cycles.sql  20250918170837_unscheduled-entries.sql  20250919164834_notes-only.sql  20250923144540_archive.sql  20250924140430_inbox.sql  20250926132202_enhanced_add_relationship.sql  20250926164451_rename-timeline-entries-to-todos.sql  20250926202057_topic-todos.sql  20250927130524_insert-todo-with-topics.sql  20251007212518_fix-timezones.sql
