[project]
name = "uv-fastapi-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.112.1",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "ruff>=0.14.0",
    "sqlalchemy[asyncio]>=2.0.43",
    "supabase>=2.21.1",
]
